src/main/java/it/unicam/cs/lc2122/gedcom/target/GedcomParser.java
// Generated from C:\Users\spacc\OneDrive\Desktop\LC2122-HIERRO-PIERO-APP3\Gedcom.g4 by ANTLR 4.10.1

package it.unicam.cs.lc2122.gedcom.target;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GedcomParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		HEAD=1, GEDC=2, VERS=3, CHAR=4, TIME=5, FILE=6, LANG=7, INDI=8, NAME=9, 
		GIVN=10, SURN=11, SEX=12, BIRT=13, DATE=14, PLAC=15, DEAT=16, BURI=17, 
		FAMC=18, FAMS=19, FAM=20, HUSB=21, WIFE=22, CHIL=23, MARR=24, TRLR=25, 
		ANCE=26, DESC=27, ZERO=28, ONE=29, TWO=30, M=31, F=32, CODE=33, TIMEFORMAT=34, 
		VERSION=35, WS=36, NEWLINE=37, STRING=38;
	public static final int
		RULE_program = 0, RULE_header = 1, RULE_head = 2, RULE_gedc = 3, RULE_vers = 4, 
		RULE_charr = 5, RULE_datefile = 6, RULE_time = 7, RULE_file = 8, RULE_lang = 9, 
		RULE_record = 10, RULE_individual = 11, RULE_family = 12, RULE_indi = 13, 
		RULE_name = 14, RULE_givn = 15, RULE_surn = 16, RULE_sex = 17, RULE_birt = 18, 
		RULE_date = 19, RULE_plac = 20, RULE_deat = 21, RULE_buri = 22, RULE_famc = 23, 
		RULE_fams = 24, RULE_fam = 25, RULE_husb = 26, RULE_wife = 27, RULE_chil = 28, 
		RULE_marr = 29, RULE_trailer = 30, RULE_command = 31, RULE_ance = 32, 
		RULE_desc = 33;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "header", "head", "gedc", "vers", "charr", "datefile", "time", 
			"file", "lang", "record", "individual", "family", "indi", "name", "givn", 
			"surn", "sex", "birt", "date", "plac", "deat", "buri", "famc", "fams", 
			"fam", "husb", "wife", "chil", "marr", "trailer", "command", "ance", 
			"desc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'HEAD'", "'GEDC'", "'VERS'", "'CHAR'", "'TIME'", "'FILE'", "'LANG'", 
			"'INDI'", "'NAME'", "'GIVN'", "'SURN'", "'SEX'", "'BIRT'", "'DATE'", 
			"'PLAC'", "'DEAT'", "'BURI'", "'FAMC'", "'FAMS'", "'FAM'", "'HUSB'", 
			"'WIFE'", "'CHIL'", "'MARR'", "'TRLR'", "'ANCE'", "'DESC'", "'0'", "'1'", 
			"'2'", "'M'", "'F'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "HEAD", "GEDC", "VERS", "CHAR", "TIME", "FILE", "LANG", "INDI", 
			"NAME", "GIVN", "SURN", "SEX", "BIRT", "DATE", "PLAC", "DEAT", "BURI", 
			"FAMC", "FAMS", "FAM", "HUSB", "WIFE", "CHIL", "MARR", "TRLR", "ANCE", 
			"DESC", "ZERO", "ONE", "TWO", "M", "F", "CODE", "TIMEFORMAT", "VERSION", 
			"WS", "NEWLINE", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gedcom.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GedcomParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public RecordContext record() {
			return getRuleContext(RecordContext.class,0);
		}
		public TrailerContext trailer() {
			return getRuleContext(TrailerContext.class,0);
		}
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			header();
			setState(69);
			record();
			setState(70);
			trailer();
			setState(71);
			command();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public HeadContext head() {
			return getRuleContext(HeadContext.class,0);
		}
		public List<GedcContext> gedc() {
			return getRuleContexts(GedcContext.class);
		}
		public GedcContext gedc(int i) {
			return getRuleContext(GedcContext.class,i);
		}
		public List<CharrContext> charr() {
			return getRuleContexts(CharrContext.class);
		}
		public CharrContext charr(int i) {
			return getRuleContext(CharrContext.class,i);
		}
		public List<DatefileContext> datefile() {
			return getRuleContexts(DatefileContext.class);
		}
		public DatefileContext datefile(int i) {
			return getRuleContext(DatefileContext.class,i);
		}
		public List<FileContext> file() {
			return getRuleContexts(FileContext.class);
		}
		public FileContext file(int i) {
			return getRuleContext(FileContext.class,i);
		}
		public List<LangContext> lang() {
			return getRuleContexts(LangContext.class);
		}
		public LangContext lang(int i) {
			return getRuleContext(LangContext.class,i);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			head();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ONE) {
				{
				setState(79);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(74);
					gedc();
					}
					break;
				case 2:
					{
					setState(75);
					charr();
					}
					break;
				case 3:
					{
					setState(76);
					datefile();
					}
					break;
				case 4:
					{
					setState(77);
					file();
					}
					break;
				case 5:
					{
					setState(78);
					lang();
					}
					break;
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadContext extends ParserRuleContext {
		public TerminalNode ZERO() { return getToken(GedcomParser.ZERO, 0); }
		public TerminalNode WS() { return getToken(GedcomParser.WS, 0); }
		public TerminalNode HEAD() { return getToken(GedcomParser.HEAD, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public HeadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_head; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitHead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadContext head() throws RecognitionException {
		HeadContext _localctx = new HeadContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_head);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ZERO);
			setState(85);
			match(WS);
			setState(86);
			match(HEAD);
			setState(87);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GedcContext extends ParserRuleContext {
		public TerminalNode ONE() { return getToken(GedcomParser.ONE, 0); }
		public TerminalNode WS() { return getToken(GedcomParser.WS, 0); }
		public TerminalNode GEDC() { return getToken(GedcomParser.GEDC, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public VersContext vers() {
			return getRuleContext(VersContext.class,0);
		}
		public GedcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_gedc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitGedc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GedcContext gedc() throws RecognitionException {
		GedcContext _localctx = new GedcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_gedc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(ONE);
			setState(90);
			match(WS);
			setState(91);
			match(GEDC);
			setState(92);
			match(NEWLINE);
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TWO) {
				{
				setState(93);
				vers();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VersContext extends ParserRuleContext {
		public TerminalNode TWO() { return getToken(GedcomParser.TWO, 0); }
		public List<TerminalNode> WS() { return getTokens(GedcomParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GedcomParser.WS, i);
		}
		public TerminalNode VERS() { return getToken(GedcomParser.VERS, 0); }
		public TerminalNode VERSION() { return getToken(GedcomParser.VERSION, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public VersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vers; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitVers(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersContext vers() throws RecognitionException {
		VersContext _localctx = new VersContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_vers);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(TWO);
			setState(97);
			match(WS);
			setState(98);
			match(VERS);
			setState(99);
			match(WS);
			setState(100);
			match(VERSION);
			setState(101);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharrContext extends ParserRuleContext {
		public TerminalNode ONE() { return getToken(GedcomParser.ONE, 0); }
		public List<TerminalNode> WS() { return getTokens(GedcomParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GedcomParser.WS, i);
		}
		public TerminalNode CHAR() { return getToken(GedcomParser.CHAR, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public VersContext vers() {
			return getRuleContext(VersContext.class,0);
		}
		public CharrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_charr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitCharr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharrContext charr() throws RecognitionException {
		CharrContext _localctx = new CharrContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_charr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(ONE);
			setState(104);
			match(WS);
			setState(105);
			match(CHAR);
			setState(106);
			match(WS);
			setState(110);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=1 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(107);
					matchWildcard();
					}
					} 
				}
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(113);
			match(NEWLINE);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TWO) {
				{
				setState(114);
				vers();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatefileContext extends ParserRuleContext {
		public TerminalNode ONE() { return getToken(GedcomParser.ONE, 0); }
		public List<TerminalNode> WS() { return getTokens(GedcomParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GedcomParser.WS, i);
		}
		public TerminalNode DATE() { return getToken(GedcomParser.DATE, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public TimeContext time() {
			return getRuleContext(TimeContext.class,0);
		}
		public DatefileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datefile; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitDatefile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatefileContext datefile() throws RecognitionException {
		DatefileContext _localctx = new DatefileContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_datefile);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(ONE);
			setState(118);
			match(WS);
			setState(119);
			match(DATE);
			setState(120);
			match(WS);
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=1 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(121);
					matchWildcard();
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(127);
			match(NEWLINE);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TWO) {
				{
				setState(128);
				time();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TimeContext extends ParserRuleContext {
		public TerminalNode TWO() { return getToken(GedcomParser.TWO, 0); }
		public List<TerminalNode> WS() { return getTokens(GedcomParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GedcomParser.WS, i);
		}
		public TerminalNode TIME() { return getToken(GedcomParser.TIME, 0); }
		public TerminalNode TIMEFORMAT() { return getToken(GedcomParser.TIMEFORMAT, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public TimeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitTime(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TimeContext time() throws RecognitionException {
		TimeContext _localctx = new TimeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_time);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(TWO);
			setState(132);
			match(WS);
			setState(133);
			match(TIME);
			setState(134);
			match(WS);
			setState(135);
			match(TIMEFORMAT);
			setState(136);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FileContext extends ParserRuleContext {
		public TerminalNode ONE() { return getToken(GedcomParser.ONE, 0); }
		public List<TerminalNode> WS() { return getTokens(GedcomParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GedcomParser.WS, i);
		}
		public TerminalNode FILE() { return getToken(GedcomParser.FILE, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_file);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(ONE);
			setState(139);
			match(WS);
			setState(140);
			match(FILE);
			setState(141);
			match(WS);
			setState(145);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=1 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(142);
					matchWildcard();
					}
					} 
				}
				setState(147);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(148);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LangContext extends ParserRuleContext {
		public TerminalNode ONE() { return getToken(GedcomParser.ONE, 0); }
		public List<TerminalNode> WS() { return getTokens(GedcomParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GedcomParser.WS, i);
		}
		public TerminalNode LANG() { return getToken(GedcomParser.LANG, 0); }
		public TerminalNode NEWLINE() { return getToken(GedcomParser.NEWLINE, 0); }
		public LangContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lang; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitLang(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LangContext lang() throws RecognitionException {
		LangContext _localctx = new LangContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lang);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(ONE);
			setState(151);
			match(WS);
			setState(152);
			match(LANG);
			setState(153);
			match(WS);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(154);
					matchWildcard();
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(160);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RecordContext extends ParserRuleContext {
		public List<IndividualContext> individual() {
			return getRuleContexts(IndividualContext.class);
		}
		public IndividualContext individual(int i) {
			return getRuleContext(IndividualContext.class,i);
		}
		public List<FamilyContext> family() {
			return getRuleContexts(FamilyContext.class);
		}
		public FamilyContext family(int i) {
			return getRuleContext(FamilyContext.class,i);
		}
		public RecordContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_record; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitRecord(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RecordContext record() throws RecognitionException {
		RecordContext _localctx = new RecordContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_record);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(164);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(162);
						individual();
						}
						break;
					case 2:
						{
						setState(163);
						family();
						}
						break;
					}
					} 
				}
				setState(168);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndividualContext extends ParserRuleContext {
		public IndiContext indi() {
			return getRuleContext(IndiContext.class,0);
		}
		public List<NameContext> name() {
			return getRuleContexts(NameContext.class);
		}
		public NameContext name(int i) {
			return getRuleContext(NameContext.class,i);
		}
		public List<SexContext> sex() {
			return getRuleContexts(SexContext.class);
		}
		public SexContext sex(int i) {
			return getRuleContext(SexContext.class,i);
		}
		public List<BirtContext> birt() {
			return getRuleContexts(BirtContext.class);
		}
		public BirtContext birt(int i) {
			return getRuleContext(BirtContext.class,i);
		}
		public List<DeatContext> deat() {
			return getRuleContexts(DeatContext.class);
		}
		public DeatContext deat(int i) {
			return getRuleContext(DeatContext.class,i);
		}
		public List<BuriContext> buri() {
			return getRuleContexts(BuriContext.class);
		}
		public BuriContext buri(int i) {
			return getRuleContext(BuriContext.class,i);
		}
		public List<FamcContext> famc() {
			return getRuleContexts(FamcContext.class);
		}
		public FamcContext famc(int i) {
			return getRuleContext(FamcContext.class,i);
		}
		public List<FamsContext> fams() {
			return getRuleContexts(FamsContext.class);
		}
		public FamsContext fams(int i) {
			return getRuleContext(FamsContext.class,i);
		}
		public IndividualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_individual; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitIndividual(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IndividualContext individual() throws RecognitionException {
		IndividualContext _localctx = new IndividualContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_individual);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			indi();
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ONE) {
				{
				setState(177);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(170);
					name();
					}
					break;
				case 2:
					{
					setState(171);
					sex();
					}
					break;
				case 3:
					{
					setState(172);
					birt();
					}
					break;
				case 4:
					{
					setState(173);
					deat();
					}
					break;
				case 5:
					{
					setState(174);
					buri();
					}
					break;
				case 6:
					{
					setState(175);
					famc();
					}
					break;
				case 7:
					{
					setState(176);
					fams();
					}
					break;
				}
				}
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FamilyContext extends ParserRuleContext {
		public FamContext fam() {
			return getRuleContext(FamContext.class,0);
		}
		public List<HusbContext> husb() {
			return getRuleContexts(HusbContext.class);
		}
		public HusbContext husb(int i) {
			return getRuleContext(HusbContext.class,i);
		}
		public List<WifeContext> wife() {
			return getRuleContexts(WifeContext.class);
		}
		public WifeContext wife(int i) {
			return getRuleContext(WifeContext.class,i);
		}
		public List<ChilContext> chil() {
			return getRuleContexts(ChilContext.class);
		}
		public ChilContext chil(int i) {
			return getRuleContext(ChilContext.class,i);
		}
		public List<MarrContext> marr() {
			return getRuleContexts(MarrContext.class);
		}
		public MarrContext marr(int i) {
			return getRuleContext(MarrContext.class,i);
		}
		public FamilyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_family; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GedcomVisitor ) return ((GedcomVisitor<? extends T>)visitor).visitFamily(this);
			else return visitor.visitChildren(this);
		}
	}
